project(Google_tests)

add_subdirectory(lib)
include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})

# adding the Google_Tests_run target
add_executable(Google_Tests_run
        Tree/FullBSTTest.cpp
        Tree/OnlyLeftNodeBSTTest.cpp
        Tree/OnlyRightNodeBSTTest.cpp
        Tree/EmptyBinaryTreeTest.cpp
        Tree/OneNodeBinaryTreeTest.cpp
        Tree/FullBinaryTreeTest.cpp
        Tree/NonCompleteBinaryTreeTest.cpp
        Tree/OnlyLeftNodeBinaryTreeTest.cpp
        Tree/OnlyRightNodeBinaryTreeTest.cpp
        Tree/OtherBinaryTreeTest.cpp
        Tree/NonCompleteBSTTest.cpp
        Tree/BinaryTreeIsSymmetricalTest.cpp
        Tree/TreeTest.cpp
        LinkList/NormalLinkListTest.cpp
        LinkList/TwoNodesLinkListTest.cpp
        LinkList/OneNodeLinkListTest.cpp
        LinkList/EmptyLinkListTest.cpp
        LinkList/LinkListDeleteDuplicationTest.cpp
        LinkList/MergeLinkListTest.cpp
        LinkList/FindFirstCommonNodeOfLinkListTest.cpp
        LinkList/OtherLinkListTest.cpp
        StackAndQueue/QueueTest.cpp
        StackAndQueue/StackTest.cpp
        StackAndQueue/IsPopOrderOfStackTest.cpp
        SkillAndThought/FibonacciTest.cpp
        SkillAndThought/PrintDiceProbabilityTest.cpp
        SortAndFind/UnsortArrayTest.cpp
        SortAndFind/CountingSortTest.cpp
        SortAndFind/DistinctSortedArrayTest.cpp
        SortAndFind/SqrtTest.cpp
        SortAndFind/RepeatSortedArrayTest.cpp
        SortAndFind/DistinctRotatedArrayTest.cpp
        SortAndFind/RepeatRotatedArrayTest.cpp
        SortAndFind/BinarySearch2Test.cpp
        Bitwise/CountOneOfNumberTest.cpp
        Bitwise/FindNumbersAppearOnce.cpp
        Bitwise/AddWithBitwiseTest.cpp
        String/CharHashTableTest.cpp
        Array/FindDuplicateNumberOfArrayTest.cpp
        Array/FindNumberOfMatrixTest.cpp
        Array/DivideArrayTest.cpp
        String/StringToIntTest.cpp
        String/ReverseStringTest.cpp
        Tree/BinarySearchTreeTest.cpp
        Other/PowerTest.cpp
        String/PrintOneToMaxOfNDigitsTest.cpp
        String/IsStringRepresentNumberTest.cpp
        SortAndFind/FindMoreThanHalfNumberInUnsortedArrayTest.cpp
        SortAndFind/FindMinKthInUnsortedArrayTest.cpp
        Tree/HeapTest.cpp
        Graph/GraphSearchTest.cpp
        Tree/GetMiddleNumberOfStreamTest.cpp
        String/StringMatchTest.cpp
        String/ReplaceStringSpaceTest.cpp
        String/SimpleRegularExpressionTest.cpp
        String/StringPermutationTest.cpp
        String/CountTranslatedNumberToStringTest.cpp
        SkillAndThought/CountInversePairsTest.cpp
        SkillAndThought/Print8QueensTest.cpp
        SkillAndThought/FillBagTest.cpp
        SkillAndThought/SimpleRegularExpression2Test.cpp
        SkillAndThought/HasStringPathInMatrixTest.cpp
        SkillAndThought/SimpleRobotMoveTest.cpp
        SkillAndThought/YangHuiTriangleTest.cpp
        SkillAndThought/MoveOnMatrixTest.cpp
        SkillAndThought/CoinChangeMemoTest.cpp
        SkillAndThought/StringEditDistanceTest.cpp
        SkillAndThought/LongestIncreaseSubsequenceTest.cpp
        Array/FindLongestAddOneSubsequenceTest.cpp
        SkillAndThought/CuttingRopeTest.cpp
        SkillAndThought/MaxSumSubArrayTest.cpp
        SkillAndThought/MaxValueOfGiftsTest.cpp
        SkillAndThought/LongestNoDuplicateSubStringTest.cpp
        Array/SumOfNumbersTest.cpp
        StackAndQueue/QueueWithMaxTest.cpp
        Other/JosephuseCircleTest.cpp
        SkillAndThought/MaxProfitOfStockTest.cpp)

# linking Google_Tests_run with Tree which will be tested
target_link_libraries(Google_Tests_run
        Tree
        LinkList
        StackAndQueue
        SkillAndThought
        SortAndFind
        Bitwise
        Array
        String
        Other
        Graph)

target_link_libraries(Google_Tests_run gtest gtest_main)
